--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <div id="home">
-            <img class="fullscreen-image" src="assets/Hero_IMG_1.png">
+            <div class="fullscreen-image"></div>
             <div class="Headline1"><h1>Markus <br> Soloding</h1></div>
             <a class="downArrow" href="#about">
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="33" viewBox="0 0 28 33" fill="none">
@@ -112,7 +112,7 @@
 
         <div id="about">
             <div class="AboutAbschnitt1">
-                <img class="img2" src="assets/IMG_2.png" alt="">
+                <div class="img2" alt=""></div>
 
                     <div class="Headline2"><h2>About Me</h2>
                         <svg id="AboutHeadLine" xmlns="http://www.w3.org/2000/svg" width="528" height="29" viewBox="0 0 528 29" fill="none">
@@ -146,9 +146,9 @@
                     </div>
                 </div>
 
-                <img class="img3" src="assets/IMG_3.png" alt="">
+                <div class="img3" alt=""></div>
             
-                <img class="img4" src="assets/IMG_4.png" alt="">
+                <div class="img4" alt=""></div>
 
                 <div class="textContainer3">
                     <div class="txtbg"><p><strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</strong>
@@ -181,7 +181,7 @@
                         </svg>
                     </div>
 
-                    <img class="AlbumCover" id="album1cover" src="assets/IMG_5.png" alt="">
+                    <div class="AlbumCover" id="album1cover" alt=""></div>
 
                     <div class="textContainerAblum" id="album1txt">
                         <div class="AlbumName"> <h4>Album Eins</h4></div>
@@ -193,10 +193,10 @@
                         <div class="AlbumDescription"> <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p> </div>
                     </div>
 
-                    <img class="AlbumCoverRight" id="album2cover" src="assets/IMG_6.png" alt="">
+                    <div class="AlbumCoverRight" id="album2cover" alt=""></div>
 
 
-                    <img class="AlbumCover" id="album3cover" src="assets/IMG_7c.png" alt="">
+                    <div class="AlbumCover" id="album3cover" alt=""></div>
 
                     <div class="textContainerAblum" id="album3txt">
                         <div class="AlbumName"> <h4>Album Drei</h4></div>
@@ -208,7 +208,7 @@
                         <div class="AlbumDescription"> <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p> </div>
                     </div>
 
-                    <img class="AlbumCoverRight" id="album4cover" src="assets/IMG_8.png" alt="">
+                    <div class="AlbumCoverRight" id="album4cover" alt=""></div>
 
                 </div>
                 <div class="SeeMoreLinks"> <a href="">MEHR SONGS</a></div>
